--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Christ the King School - 8th Grade Earth Science
+name: Christ the King School - 8th Grade Math
 
 # Short bio or description (displayed in the header)
-description: Lessons for 8th Grade Earth Science
+description: Lessons for 8th Grade Math
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/ctkstl/earth_science/gh-pages/images/ctks_logo.png
+avatar: https://raw.githubusercontent.com/ctkstl/8th_math/gh-pages/images/ctks_logo.png
 
 #
 # Flags below are optional
