--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: ctkstl/earth_science
+  github: ctkstl/8th_math
   instagram:
   linkedin:
   pinterest:
