--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ baseurl: "/8th_math"
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: redcarpet
+markdown: kramdown
 highlighter: pygments
 permalink: /:title/
 
